Updated security config with updated permits and rules for JWT support